Cleanup README files.